--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
-        {% block stylesheets %}
-        {% endblock %}
-
-        {% block javascripts %}
-        {% endblock %}
-    </head>
-    <body>
-            {% block body %}
-        <h1 class="text-3xl font-bold underline">Hello world  !</h1>
-
+    {% block stylesheets %}
     {% endblock %}
-    </body>
+
+    {% block javascripts %}
+    {% endblock %}
+</head>
+<body>
+{% block body %}
+    {% include 'layouts/header.twig' %}
+    <h1 class="text-3xl font-bold underline">Hello world !</h1>
+
+    {% include 'layouts/footer.twig' %}
+{% endblock %}
+</body>
 </html>
