--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,35 +11,119 @@
     - @tailwindcss/forms
 -->
 
+    <!--
+      Heads up! 👋
 
+      Plugins:
+        - @tailwindcss/forms
+    -->
 
+    <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
+        <div class="mx-auto max-w-lg text-center">
+            <h1 class="text-2xl font-bold sm:text-3xl">Login</h1>
 
-    <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+        </div>
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+        <form action="" class="mx-auto mb-0 mt-8 max-w-md space-y-4" method="post">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
+
+            {% if app.user %}
+                <div class="mb-3">
+                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                </div>
+            {% endif %}
+
+            <div>
+                <label for="email" class="sr-only">Email</label>
+
+                <div class="relative">
+                    <input
+                        type="email"
+                        class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+                        placeholder="Enter email"
+                        value="{{ last_username }}"
+                        name="_username"
+                        id="username"
+                    />
+
+                    <span class="absolute inset-y-0 end-0 grid place-content-center px-4">
+                      <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="h-4 w-4 text-gray-400"
+                          fill="none"
+                          viewBox="0 0 24 24"
+                          stroke="currentColor"
+                      >
+                        <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"
+                        />
+                      </svg>
+                    </span>
+                </div>
             </div>
-        {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control"
-               autocomplete="email" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password"
-               required>
+            <div>
+                <label for="password" class="sr-only">Password</label>
 
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
+                <div class="relative">
+                    <input
+                        type="password"
+                        class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+                        placeholder="Enter password"
+                        name="_password"
+                        id="password"
+                        autocomplete="current-password"
+                    />
+
+                    <span class="absolute inset-y-0 end-0 grid place-content-center px-4">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="h-4 w-4 text-gray-400"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+                            />
+                         <path
+                             stroke-linecap="round"
+                             stroke-linejoin="round"
+                             stroke-width="2"
+                             d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
+                         />
+                        </svg>
+                    </span>
+                </div>
+            </div>
+
+            <div class="flex items-center justify-between">
+                <p class="text-sm text-gray-500">
+                    Pas de compte?
+                    <a class="underline" href="">Inscription</a>
+                </p>
+
+                <input type="hidden" name="_csrf_token"
+                       value="{{ csrf_token('authenticate') }}"
+                >
+
+                <button
+                    type="submit"
+                    class="inline-block rounded-lg bg-teal-600 px-5 py-3 text-sm font-medium text-white"
+                >
+                    Valider
+                </button>
+            </div>
+        </form>
+    </div>
 
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
-    </form>
 {% endblock %}
