91 feat login redirect (#100)

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -108,7 +108,7 @@
             <div class="flex items-center justify-between">
                 <p class="text-sm text-gray-500">
                     Pas de compte?
-                    <a class="underline" href="">Inscription</a>
+                    <a class="underline" href="/register">Inscription</a>
                 </p>
 
                 <input type="hidden" name="_csrf_token"
