--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -80,7 +80,7 @@
 
                             <p class="mt-4 text-sm text-gray-500 sm:mt-0">
                                 Vous avez déjà un compte?
-                                <a href="#" class="text-gray-700 underline">Log in</a>.
+                                <a href="/login" class="text-gray-700 underline">Log in</a>.
                             </p>
                         </div>
                         {{ form_end(registrationForm) }}
