corrections aspect input

--- a/templates/new_prospection/index.html.twig
+++ b/templates/new_prospection/index.html.twig
@@ -9,17 +9,17 @@
         <form action="" method="POST">
             <div class="mb-4">
                 <label for="status" class="block text-gray-700 font-bold mb-2">Status</label>
-                <input type="text" id="status" name="status"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-none focus:border-blue-500">
+                <input type="text" id="status" name="status"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
             </div>
 
             <div class="mb-4">
                 <label for="commentaire" class="block text-gray-700 font-bold mb-2">Commentaire</label>
-                <textarea id="commentaire" name="commentaire" placeholder="Entrez votre commentaire" class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-none focus:border-blue-500"></textarea>
+                <textarea id="commentaire" name="commentaire" placeholder="Entrez votre commentaire" class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500"></textarea>
             </div>
 
             <div class="mb-4">
                 <label for="datepicker" class="block text-gray-700 font-bold mb-2">Date</label>
-                <input type="date" id="datepicker" name="datepicker" class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-none focus:border-blue-500">
+                <input type="date" id="datepicker" name="datepicker" class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
             </div>
 
             <button type="submit" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Envoyer</button>
