--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,7 +41,7 @@
                 <div class="relative">
                     <input
                         type="email"
-                        class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+                        class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm focus:outline-teal-500"
                         placeholder="Enter email"
                         value="{{ last_username }}"
                         name="_username"
@@ -73,7 +73,7 @@
                 <div class="relative">
                     <input
                         type="password"
-                        class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+                        class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm focus:outline-teal-500"
                         placeholder="Enter password"
                         name="_password"
                         id="password"
