ajout input contact

--- a/templates/new_prospection/index.html.twig
+++ b/templates/new_prospection/index.html.twig
@@ -11,6 +11,10 @@
                 <label for="status" class="block text-gray-700 font-bold mb-2">Status</label>
                 <input type="text" id="status" name="status"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
             </div>
+            <div class="mb-4">
+                <label for="status" class="block text-gray-700 font-bold mb-2">Contact</label>
+                <input type="text" id="status" name="status"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
+            </div>
 
             <div class="mb-4">
                 <label for="commentaire" class="block text-gray-700 font-bold mb-2">Commentaire</label>
