--- a/templates/new_prospection/index.html.twig
+++ b/templates/new_prospection/index.html.twig
@@ -12,8 +12,8 @@
                 <input type="text" id="status" name="status"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
             </div>
             <div class="mb-4">
-                <label for="status" class="block text-gray-700 font-bold mb-2">Contact</label>
-                <input type="text" id="status" name="status"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
+                <label for="contact" class="block text-gray-700 font-bold mb-2">Contact</label>
+                <input type="text" id="contact" name="contact"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
             </div>
 
             <div class="mb-4">
