--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -18,95 +18,79 @@
         </a>
 
         <div class="flex flex-1 items-center justify-end md:justify-between">
-        
+
             <nav aria-label="Global" class="hidden md:block">
-        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}    
-                <ul class="flex items-center gap-6 text-sm">
-                    <li>
-                        <a
-                            class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                            href="/"
-                        >
-                            About
-                        </a>
-                    </li>
-
-                    <li>
-                        <a
-                            class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                            href="/"
-                        >
-                            Careers
-                        </a>
-                    </li>
-
-                    <li>
-                        <a
-                            class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                            href="/"
-                        >
-                            History
-                        </a>
-                    </li>
-
-                    <li>
-                        <a
-                            class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                            href="/"
-                        >
-                            Services
-                        </a>
-                    </li>
-
-                    <li>
-                        <a
-                            class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                            href="/"
-                        >
-                            Projects
-                        </a>
-                    </li>
-
-                    <li>
-                        <a
-                            class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
-                            href="/"
-                        >
-                            Blog
-                        </a>
-                    </li>
-                </ul>
-              {% endif %}  
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                    <ul class="flex items-center gap-6 text-sm">
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <li>
+                                <a
+                                    class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                                    href={{path('admin')}}
+                                >
+                                    Admin
+                                </a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                {% endif %}
             </nav>
-            
+
 
             <div class="flex items-center gap-4">
                 <div class="sm:flex sm:gap-4">
-                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                    <a
-                        class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 sm:block"
-                        href={{path('app_logout')}}
-                    >
-                        Logout
-                    </a>
-                {% else %}
-                    <a
-                        class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700 dark:hover:bg-teal-500"
-                        href={{path('app_login')}}
-                    >
-                        Login
-                    </a>
+                    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        <a
+                            href="{{ path('app_profile') }}"
+                            class="group flex shrink-0 items-center rounded-lg transition"
+                        >
+                            <span class="sr-only">Menu</span>
+                            <img
+                                alt="Man"
+                                src="https://images.unsplash.com/photo-1600486913747-55e5470d6f40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                class="h-10 w-10 rounded-full object-cover"
+                            />
 
-                    <a
-                        class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 sm:block"
-                        href={{path('app_register')}}
-                    >
-                        Register
-                    </a>
+                            <p class="ms-2 hidden text-left text-xs sm:block">
+                                <strong class="block font-medium text-gray-100"> {{ app.user.fullname }}</strong>
 
-                {% endif %}
-                
+                                <span class="text-gray-500"> {{ app.user.email }} </span>
+                            </p>
 
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="ms-4 hidden h-5 w-5 text-gray-500 transition group-hover:text-gray-700 sm:block"
+                                viewBox="0 0 20 20"
+                                fill="currentColor"
+                            >
+                                <path
+                                    fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"
+                                />
+                            </svg>
+                        </a>
+                        <a
+                            class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 sm:block"
+                            href={{path('app_logout')}}
+                        >
+                            Logout
+                        </a>
+                    {% else %}
+                        <a
+                            class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700 dark:hover:bg-teal-500"
+                            href={{path('app_login')}}
+                        >
+                            Login
+                        </a>
+
+                        <a
+                            class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 dark:bg-gray-800 dark:text-white dark:hover:text-white/75 sm:block"
+                            href={{path('app_register')}}
+                        >
+                            Register
+                        </a>
+                    {% endif %}
                 </div>
 
                 <button
