--- a/templates/new_prospection/index.html.twig
+++ b/templates/new_prospection/index.html.twig
@@ -3,30 +3,57 @@
 {% block title %}Nouvelle prospection{% endblock %}
 
 {% block body %}
-    <div class="max-w-md mx-auto bg-white rounded p-8 shadow-md my-20 ">
-        <h2 class="text-2xl font-bold mb-4">Nouvelle prospection</h2>
+    <div class="max-w-md mx-auto bg-white">
+        <h2 class="text-2xl font-bold mb-4 text-center">Nouvelle prospection</h2>
 
-        <form action="" method="POST">
+        <form id="new-prospection-form" method="POST">
             <div class="mb-4">
-                <label for="status" class="block text-gray-700 font-bold mb-2">Status</label>
-                <input type="text" id="status" name="status"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
+                <select name="type" id="type" class="w-full border rounded-md py-3 px-3 text-gray-700 focus:outline-teal-500">
+                    {% for type in types %}
+                        <option value="{{ type.value }}">{{ type.value }}</option>
+                    {% endfor %}
+                </select>
             </div>
             <div class="mb-4">
-                <label for="contact" class="block text-gray-700 font-bold mb-2">Contact</label>
-                <input type="text" id="contact" name="contact"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
-            </div>
-
-            <div class="mb-4">
-                <label for="commentaire" class="block text-gray-700 font-bold mb-2">Commentaire</label>
-                <textarea id="commentaire" name="commentaire" placeholder="Entrez votre commentaire" class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500"></textarea>
+                <input type="text" id="name" name="name" placeholder="Nom"  class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
             </div>
 
             <div class="mb-4">
-                <label for="datepicker" class="block text-gray-700 font-bold mb-2">Date</label>
-                <input type="date" id="datepicker" name="datepicker" class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500">
+                <textarea id="commentaire" name="comment" placeholder="Entrez votre commentaire" class="w-full border rounded-md py-2 px-3 text-gray-700 focus:outline-teal-500"></textarea>
             </div>
 
-            <button type="submit" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Envoyer</button>
+            <div class="text-center">
+                <button type="submit" class="bg-teal-600 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Envoyer</button>
+            </div>
         </form>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script type="application/javascript" defer>
+        const form = document.querySelector('#new-prospection-form')
+        console.log(form)
+        form.addEventListener('submit', function (e) {
+            console.log('submit')
+            e.preventDefault()
+            const formData = new FormData(e.target)
+            const data = Object.fromEntries(formData.entries())
+            console.log(data)
+
+            fetch("{{ path('_api_/prospections{._format}_post') }}", {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/ld+json'
+                },
+                body: JSON.stringify(data),
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.id) {
+                        console.log(data.id)
+                        window.location.href = "{{ path('app_home') }}"
+                    }
+                })
+        })
+    </script>
 {% endblock %}
