--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,21 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="icon"
           href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     {% block stylesheets %}
     {% endblock %}
-
-    {% block javascripts %}
-    {% endblock %}
 </head>
-<body>
-    {% include 'layouts/header.html.twig' %}
-    {% block body %}
-        <h1 class="text-3xl font-bold underline">Hello world !</h1>
-    {% endblock %}
-    {% include 'layouts/footer.html.twig' %}
+<body class="bg-white text-black antialiased">
+    <section class="mx-auto xl:px-0">
+        <div class="flex h-screen flex-col justify-between font-sans">
+
+            {% include 'layouts/header.html.twig' %}
+            <div class="mx-2">
+                {% block body %}
+                    <h1 class="text-3xl font-bold underline">Hello world !</h1>
+                {% endblock %}
+            </div>
+
+            {% include 'layouts/footer.html.twig' %}
+        </div>
+    </section>
 </body>
+{% block javascripts %}
+{% endblock %}
 </html>
