chore: #136 install stof_doctrine_extension

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,7 +24,7 @@
 							Découvrez Ri7 Prospector, l'appli ultime de prospection d'entreprise. Boostez votre croissance grâce à une analyse intelligente, une personnalisation pointue et une automatisation intuitive. Simplifiez votre prospection, ciblez vos prospects avec précision, et ouvrez la voie vers de nouvelles opportunités. Ri7 Prospector : votre allié stratégique pour conquérir le marché.
 						</p>
 
-						<a href="{{ path('app_new_prospection') }}" class="mt-8 inline-block rounded border border-teal-600 bg-teal-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-indigo-600 focus:outline-none focus:ring active:text-indigo-500">
+						<a id="get-started" href="{{ path('app_new_prospection') }}" class="mt-8 inline-block rounded border border-teal-600 bg-teal-600 px-12 py-3 text-sm font-medium text-white hover:bg-transparent hover:text-indigo-600 focus:outline-none focus:ring active:text-indigo-500">
 							Démarrez votre prospection !
 						</a>
 					</div>
