--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
     {% endfor %}
 
     <section class="bg-white m-12">
-        <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
+        <div class="lg:grid lg:grid-cols-12">
             <aside
                 class="relative block h-16 lg:order-last lg:col-span-5 lg:h-full xl:col-span-6"
             >
