feat: #128 add new controller indexprospectioncontroller

--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -22,6 +22,14 @@
             <nav aria-label="Global" class="hidden md:block">
                 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <ul class="flex items-center gap-6 text-sm">
+                        <li>
+                            <a
+                                class="text-gray-500 transition hover:text-gray-500/75 dark:text-white dark:hover:text-white/75"
+                                href={{path('app_prospection_index')}}
+                            >
+                                Prospections
+                            </a>
+                        </li>
                         {% if is_granted('ROLE_ADMIN') %}
                             <li>
                                 <a
