--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,8 @@
         <div class="flex h-screen flex-col justify-between font-sans">
 
             {% include 'layouts/header.html.twig' %}
-            <div class="mx-2">
+
+            <div class="mx-auto max-w-screen-2xl px-4 py-16 sm:px-6 lg:px-8">
                 {% block body %}
                     <h1 class="text-3xl font-bold underline">Hello world !</h1>
                 {% endblock %}
