--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 
             {% include 'layouts/header.html.twig' %}
 
-            <div class="mx-auto max-w-screen-2xl px-4 py-16 sm:px-6 lg:px-8">
+            <div class="mx-auto w-full max-w-screen-2xl px-4 py-16 sm:px-6 lg:px-8">
                 {% block body %}
                     <h1 class="text-3xl font-bold underline">Hello world !</h1>
                 {% endblock %}
@@ -27,7 +27,12 @@
             {% include 'layouts/footer.html.twig' %}
         </div>
     </section>
+
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+        lucide.createIcons();
+    </script>
+    {% block javascripts %}
+    {% endblock %}
 </body>
-{% block javascripts %}
-{% endblock %}
 </html>
