--- a/templates/prospection/index_prospection/index.html.twig
+++ b/templates/prospection/index_prospection/index.html.twig
@@ -3,37 +3,44 @@
 {% block title %}Liste des prospection en cours{% endblock %}
 
 {% block body %}
-    <h1>Liste des prospection en cours</h1>
+    <h1 class="mx-auto">Liste des prospection en cours</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Client</th>
-                <th>Contact</th>
-                <th>Type</th>
-                <th>Statut</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for prospection in prospections %}
-            <tr>
-                <td>{{ prospection.id }}</td>
-                <td>{{ prospection.name }}</td>
-                <td>{{ prospection.contact|default('') }}</td>
-                <td>{{ prospection.status.value }}</td>
-                <td>
-                    <a href="{{ path('app_prospection_show', {'id': prospection.id}) }}">show</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">Aucune prospection en cours</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <twig:Link href="{{ path('app_prospection_new') }}" >{{ 'Créer une prospection'|trans }}</twig:Link>
 
-    <a href="{{ path('app_prospection_new') }}">Create new</a>
+    {% for prospection in prospections %}
+        <div class="flex flex-col gap-4 p-2">
+            <div class="flex justify-between items-center px-4 py-3 border rounded-lg shadow-lg">
+                <div class="flex flex-col w-2/4">
+                    <p>
+                        <span class="text-lg font-bold">{{ prospection.name }}</span>
+                        <span class="text-sm">{{ prospection.contact|default('') }}</span>
+                    </p>
+                    <p>
+                        <span class="font-bold text-teal-600 text-sm">{{ prospection.type.value|trans }}</span>
+                    </p>
+                    <p class="text-sm text-gray-500">
+                        <span>{{ prospection.createdAt.format('d/m/Y H:i') }}</span>
+                    </p>
+                </div>
+                <div class="flex justify-center items-center w-1/4">
+                    <span class="text-sm bg-gray-500 text-white rounded-lg px-3 py-1 text-center shadow-lg">{{ prospection.status.value }}</span>
+                </div>
+                <div class="flex items-end gap-2 w-1/4">
+                    <a href="{{ path('app_prospection_show', {'id': prospection.id}) }}" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10">
+                        <i data-lucide="file-signature"></i>
+                        <span class="sr-only">Update</span>
+                    </a>
+                    <a href="" class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input hover:bg-accent hover:text-accent-foreground h-10 w-10 bg-red-500 text-white">
+                        <i data-lucide="file-x-2"></i>
+                        <span class="sr-only">Delete</span>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    {% else %}
+        <div class="alert alert-warning" role="alert">
+            Aucune prospection en cours
+        </div>
+    {% endfor %}
 {% endblock %}
